--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 coverage==4.4.2
-mock>=2.0.0
+mock==2.0.0
 mysql-connector-python>=1.1.6
 MySQL-python>=1.2.3rc1
 mysql-utilities>=1.3.6
-pymongo>=3.2
+pymongo==3.2.0
+simplejson==2.0.9
 unittest2>=1.1.0
