Updated config/mysql_cfg.py.TEMPLATE v2.3.0 - Changed name of configuration entry

--- a/config/mysql_cfg.py.TEMPLATE
+++ b/config/mysql_cfg.py.TEMPLATE
@@ -2,7 +2,7 @@
 # Classification (U)
 # Unclassified until filled in.
 user = 'USER'
-passwd = 'PASSWORD'
+japd = 'PASSWORD'
 # MySQL DB host information
 host = 'SERVER_IP'
 name = 'HOST_NAME'
